syntax = "proto3";
package ws_connect;
option go_package = "github.com/kagari-org/cryonet/gen/ws_connect";
